fixed ylabs of fig 5, ref to 2nd DAG, formula typo

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -195,7 +195,7 @@ We designed the simulations to estimate the effects of $\e(R)$ and $\var(R)$ in 
 6) The organism has no perceptive range or memory. It is unable to detect, learn, or predict where resources are abundant (high $\e(R)$) or reliable (low $\var(R)$) over time or space.
 7) Animals only move to search for food or return to the center of their home-range after reaching satiety.
 
-Additional information is provided in Appendix B, including the directed acyclical graph [see fig. B6 and @mcelreath_statistical_2016] we used to infer causal the mechanisms of changes in $H$ and estimate the direct effects of $\e(R)$ and $\var(R)$ on $H$ (contrast this with fig. C5 and the empirical case study below).
+Additional information is provided in Appendix B, including the directed acyclical graph [see fig. B6 and @mcelreath_statistical_2016] we used to infer causal the mechanisms of changes in $H$ and estimate the direct effects of $\e(R)$ and $\var(R)$ on $H$ (contrast this with fig. C3 and the empirical case study below).
 
 ```{r 5-5-sims, fig.cap="Simulated home-range sizes, $H$, of an organism living in habitats where the mean and variance in resources are constant, linearly increasing, cyclical, drifting, or erratic over time (but homogenous over space for a given $t$). Note how $H$ decreases nonlinearly as $\\mu(t)$ increases and increases nonlinearly as $\\sigma^2(t)$ increases. Additionally, the variance in $H$ is higher when $\\mu(t)$ is lower or $\\sigma^2(t)$ is higher, and changes in $\\sigma^2(t)$ have greater impacts when $\\mu(t)$ is low.", out.width='100%'}
 knitr::include_graphics('../figures/mean-variance-5-by-5-hr-sims.png')
@@ -231,7 +231,7 @@ knitr::include_graphics('../figures/tapir-example.png')
 
 \noindent The amount of space organisms is determined by a multitude of factors [@nathan_movement_2008], but the search for resources is often a main driver of animal how much and where organisms move. This paper presents two hypotheses that describe the effects of resource abundance and stochasticity on organisms' range sizes. We use quantitative simulations and an empirical case study to support the hypotheses and show that, together, they provide a simple framework for understanding how motile organisms adapt their movement in dynamic environments.
 
-Separately, resource abundance and stochasticity have simple but opposing effects on organisms' range sizes: $H$ decreases with $\e(R)$ and increases with $\var(R)$. Together, the degree to which $\e(R)$ affects $H$ depends on$ $\var(R)$, and vice-versa, so organisms' responses to resource dynamics can be complex. The simulated and empirical results suggest qualitatively similar marginal effects of $\e(R)$ and $\var(R)$, but there are differences in the estimated interactive effects. In the simulated data, $\var(R)$ has little effect when $\e(R)$ is low and a strong effect when $\e(R)$ is high, while the opposite is true for the empirical data. This is due to two reasons. Firstly, the shape and symmetry of bounded distributions such as Gamma ($R > 0$) and Beta ($0 < R < 1$) distributions depend on both $\e(R)$ and $\var(R)$ (figs. A3, A4), but $\var(R)$ does not affect the shape of a Gamma distribution as much if $\e(R)$ is low (fig. B3). Secondly, and perhaps more interestingly, the simulation approach does not account for real-world adaptations to $\e(R)$ and $\var(R)$ such as selective space use, which we account for in the empirical approach. Below we discuss the strengths and limitations of each approach.
+Separately, resource abundance and stochasticity have simple but opposing effects on organisms' range sizes: $H$ decreases with $\e(R)$ and increases with $\var(R)$. Together, the degree to which $\e(R)$ affects $H$ depends on $\var(R)$, and vice-versa, so organisms' responses to resource dynamics can be complex. The simulated and empirical results suggest qualitatively similar marginal effects of $\e(R)$ and $\var(R)$, but there are differences in the estimated interactive effects. In the simulated data, $\var(R)$ has little effect when $\e(R)$ is low and a strong effect when $\e(R)$ is high, while the opposite is true for the empirical data. This is due to two reasons. Firstly, the shape and symmetry of bounded distributions such as Gamma ($R > 0$) and Beta ($0 < R < 1$) distributions depend on both $\e(R)$ and $\var(R)$ (figs. A3, A4), but $\var(R)$ does not affect the shape of a Gamma distribution as much if $\e(R)$ is low (fig. B3). Secondly, and perhaps more interestingly, the simulation approach does not account for real-world adaptations to $\e(R)$ and $\var(R)$ such as selective space use, which we account for in the empirical approach. Below we discuss the strengths and limitations of each approach.
 
 ## Strengths and limitations of the simulation-based approach
 
@@ -244,8 +244,6 @@ Deviations from the simulations offer a means of detecting when the underlying a
 \noindent There are two main advantages of using and empirical approach. Firstly, using real-world animal movement data can produce scale-appropriate and easily interpretable estimates. Secondly, empirical models directly quantify the effects of $\e(R)$, $\var(R)$, and confounding variables without having to design complex and time-consuming simulations. However, it is not always possible to quantify confounding variables, such as competition. While there may be some appropriate proxies, such as density competitors, these variables may be hard to quantify, and they may not account for the confounding effects appropriately (the presence of competitors may not reflect competitive pressure). This is problematic if one is interested in the direct causal effect of $\e(R)$ and $\var(R)$, which requires removing any non-negligible confounding effects [@mcelreath_statistical_2016].<!-- However, it may not be an issue if researchers are interested in estimating total causal effects, whether they be direct causal paths or not [@mcelreath_statistical_2016]. For example, one may choose not to account for competition if $\e(R)$ influences competitor density but competitors do not have a measurable effect on $R$. In contrast, if competitor abundance determines $R$ (and not vice-versa), then failing to account for competitors will produce incorrect estimates of the causal effects.-->
 
 Similarly, if $R$ is often non-measurable. Proxies of $R$, such as NDVI [@pettorelli_normalized_2011], which may introduce complexities. While $R$ and NDVI are correlated for many species [e.g., @phillips_evaluating_2008; @middleton_green-wave_2018; @seigle-ferrand_systematic_2021; @merkle_large_2016; @geremia_migrating_2019; @merkle_spatial_2019], the relationship between the two can be weak [@gautam_ndvi_2019], satellite-dependent [@huang_commentary_2021], and nonlinear [@huang_commentary_2021; @fan_global_2016]. This can introduce two sources of bias: ecosystem-level biases (indicated as $Z$ in the directed acyclical graph in fig. C3) and satellite-level confounding variables ($S$ in fig. C3).
-
-***HERE***
 
 Examples of ecosystem-level biases are the effects of competition, predation, habitat connectivity, and movement costs, all of which can depend on habitat quality, and, consequently, be correlated nonlinearly to $R$ and NDVI [@jetz_scaling_2004; @prox_framework_2020]. Resource-rich patches can attract larger amounts of competitors [@kacelnik_ideal_1992] and predators [@duncan_lifehistory_2015], which may, in turn, increase pressures from competition and predation [@charnov_optimal_1976; @brown_ecology_1999]. However, such pressures may result in both an expansion of the range [@jetz_scaling_2004; @prox_framework_2020] or a contraction, since larger ranges can be harder to defend and result in higher movement costs [@grant_whether_1993; @jetz_scaling_2004] and encounter rates [@martinez-garcia_how_2020].
 
