addressed Chris's comments

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -21,7 +21,7 @@ title: \large How resource abundance and stochasticity affect organisms' range s
 #   - escas: Escola Superior de Conservação Ambiental E Sustentabilidade (ESCAS/IPÊ), Rodovia Dom Pedro I, km 47, Nazaré Paulista, São Paulo 12960-000, Brazil.
 #   - cmps: Department of Computer Science, Math, Physics, and Statistics, The University of British Columbia Okanagan, Kelowna, British Columbia, Canada.
 bibliography: 'hr-resource-stoch.bib'
-# csl: 'the-american-naturalist-2024-03.csl'
+csl: 'the-american-naturalist-2024-03.csl'
 # csl: 'nature.csl' # to count refs
 fontsize: 12pt
 indent: true
@@ -71,7 +71,7 @@ abstract <- "The amount of space organisms use is thought to be tightly linked t
 
 \noindent \textbf{Tables}: 0
 
-\noindent \textbf{References}: 109 (updated on 2024-05-29) <!-- counted by using nature csl -->
+\noindent \textbf{References}: 109 (updated on 2024-06-21) <!-- counted by using nature csl -->
 
 \noindent \textbf{Appendices}: 3
 
@@ -135,7 +135,7 @@ In this paper, we illustrate how an organism's range size can be expected to dep
 
 # Resources as a random variable
 
-\noindent Resources are often unpredictable (and difficult to quantify), since they depend on various factors which cannot be accounted for easily, including climate [@lindstedt_seasonality_1985; @schmidt_interplay_2020; @morellet_seasonality_2013], weather [@fjelldal_nightly_2021; @morellet_seasonality_2013], competitive pressure [@torrez-herrera_monkeys_2020; @rich_anthropogenic_2012], and differences in energetics at among individuals [@schmidt_interplay_2020] and species [@jetz_scaling_2004]. Thus, we can treat the amount of resources $R$ at a given point in space ($u$) and time ($t$) as a random variable, denoted as $R(u, t)$. Treating resources as a random variable allows us to leverage techniques from probability theory and statistics, such as the expectation of a random variable (i.e., its mean) and its variance around the mean. We indicate the expected value and variance of random variable $R$ using $\e(R)$ and $\var(R)$, respectively, and we use $\mu(t, u)$ and $\sigma^2(t, u)$ to indicate them as functions of time ($t$) and space ($u$). Additional definitions and explanations are available in Appendix A.
+\noindent Resources are often unpredictable (and difficult to quantify), since they depend on various factors which cannot be accounted for easily, including climate [@lindstedt_seasonality_1985; @schmidt_interplay_2020; @morellet_seasonality_2013], weather [@fjelldal_nightly_2021; @morellet_seasonality_2013], competitive pressure [@torrez-herrera_monkeys_2020; @rich_anthropogenic_2012], and differences in energetics at among individuals [@schmidt_interplay_2020] and species [@jetz_scaling_2004]. Thus, we can treat the amount of resources $R$ at a given point in time ($t$) and space (location vector $\vec u$) as a random variable, denoted as $R(t, \vec u)$. Treating resources as a random variable allows us to leverage techniques from probability theory and statistics, such as the expectation of a random variable (i.e., its mean) and its variance around the mean. We indicate the expected value and variance of random variable $R$ using $\e(R)$ and $\var(R)$, respectively, and we use $\mu(t, \vec u)$ and $\sigma^2(t, \vec u)$ to indicate them as functions of time ($t$) and space ($\vec u$). Additional definitions and explanations are available in Appendix A.
 
 ## Effects of resource abundance, $\e(R)$
 
@@ -160,16 +160,16 @@ hist(rgamma(n = 1e4, shape = 500/3, scale = 3))
 layout(1)
 ```
 
-Recognizing changes in $\var(R)$ helps account for the residual, fine-scale variation in $R$ after accounting for trends in the large-scale average $R$ [e.g., variations in plant phenology between years after accounting for mean seasonal trends, see @levin_problem_1992]. However, when both $\e(R)$ and $\var(R)$ change over time (fig. A2), disentangling changes in $\e(R)$ and $\var(R)$ is not simple [@steixner-kumar_strategies_2020]. Statistically, this is because the more change one attributes to $\mu(t, u)$ (i.e., the wigglier it is), the smaller $\sigma^2(t, u)$ becomes. Conversely, the smoother $\mu(t, u)$ is, the larger $\sigma^2(t, u)$ becomes. Biologically, this is important because an organism's perception scale determines whether it attributes a change in $R$ to a trend in $\e(R)$ or as a stochastic event [i.e., due to $\var(R)$; see @levin_problem_1992]. An organism's perception of changes in $R$ will also depend strongly on the its cognitive capacities and memory [@mueller_social_2013; @abrahms_memory_2019; @foley_severe_2008; @falcon-cortes_hierarchical_2021; @fagan_spatial_2013]. Whether an organism is able to predict trends in $\sigma^2(t, u)$ or not, environmental variability is thought to reduce a landscape's energetic balance [@chevin_adaptation_2010], which, in turn, decreases organisms' fitness [e.g., @berger_climate_2018] and increases their range size. While this is true for both predictable and unpredictable stochasticity, extreme and rare events are more likely to have a stronger effect due to their unpredictability and magnitude [@logares_black_2012; @anderson_black-swan_2017]. A few recent studies support these hypotheses [@chevin_adaptation_2010; @morellet_seasonality_2013; @nandintsetseg_variability_2019; @riotte-lambert_environmental_2020], but many of them are limited in geographic and taxonomic scales, so the extent to which these preliminary findings can be generalized is currently unknown. Thus, there remains a need for developing a more complete understanding of how organisms' range sizes changes with environmental stochasticity.
+Recognizing changes in $\var(R)$ helps account for the residual, fine-scale variation in $R$ after accounting for trends in the large-scale average $R$ [e.g., variations in plant phenology between years after accounting for mean seasonal trends, see @levin_problem_1992]. However, when both $\e(R)$ and $\var(R)$ change over time (fig. A2), disentangling changes in $\e(R)$ and $\var(R)$ is not simple [@steixner-kumar_strategies_2020]. Statistically, this is because the more change one attributes to $\mu(t, \vec u)$ (i.e., the wigglier it is), the smaller $\sigma^2(t, \vec u)$ becomes. Conversely, the smoother $\mu(t, \vec u)$ is, the larger $\sigma^2(t, \vec u)$ becomes. Biologically, this is important because an organism's perception scale determines whether it attributes a change in $R$ to a trend in $\e(R)$ or as a stochastic event [i.e., due to $\var(R)$; see @levin_problem_1992]. An organism's perception of changes in $R$ will also depend strongly on the its cognitive capacities and memory [@mueller_social_2013; @abrahms_memory_2019; @foley_severe_2008; @falcon-cortes_hierarchical_2021; @fagan_spatial_2013]. Whether an organism is able to predict trends in $\sigma^2(t, \vec u)$ or not, environmental variability is thought to reduce a landscape's energetic balance [@chevin_adaptation_2010], which, in turn, decreases organisms' fitness [e.g., @berger_climate_2018] and increases their range size. While this is true for both predictable and unpredictable stochasticity, extreme and rare events are more likely to have a stronger effect due to their unpredictability and magnitude [@logares_black_2012; @anderson_black-swan_2017]. A few recent studies support these hypotheses [@chevin_adaptation_2010; @morellet_seasonality_2013; @nandintsetseg_variability_2019; @riotte-lambert_environmental_2020], but many of them are limited in geographic and taxonomic scales, so the extent to which these preliminary findings can be generalized is currently unknown. Thus, there remains a need for developing a more complete understanding of how organisms' range sizes changes with environmental stochasticity.
 
 ```{r, eval=FALSE, echo=FALSE}
 # the median decreases as V(R) increases, even if E(R) is constant
 source('functions/qgamma2.R')
 plot(1:100, qgamma2(p = 0.5, mu = 3, sigma2 = 1:100), type = 'l',
-     xlab = expression(sigma^2~('u,'~t)), ylab = 'Median R')
+     xlab = expression(sigma^2~('t,'~u)), ylab = 'Median R')
 ```
 
-Similarly to $\e(R)$, we hypothesize $\var(R)$ has a nonlinear effect on an organism's range size. When $\var(R)$ is low enough that $R$ is relatively predictable, we expect organisms to be range-resident with small home ranges, and we do not expect small changes in $\var(R)$ to have a noticeable effect. As resources become increasingly unpredictable, we expect home range size to increase progressively faster (fig. \@ref(fig:s2-hyp)) because: (1) as $\var(R)$ increases, the chances of finding low $R$ increase superlinearly, (2) the added movement required to search for food increases organisms' energetic requirements, and (3) stochasticity reduces an organism's ability to specialize and reduce competition for $R$ [@levins_evolution_1974]. If resources remain highly unpredictable over long periods of time (e.g., multiple lifespans), organisms may evolve or develop new and consistent behaviors (e.g, nomadism) or adaptations (e.g., increased fat storage or food caching) to buffer themselves against times of unpredictably low $R$. Conversely, if changes in $\sigma^2(t, u)$ are sufficiently predictable, organisms may learn to anticipate and prepare for times of greater stochasticity by pre-preemptively caching food, reducing energetic needs, migrating, or relying on alternative food sources [e.g., @van_baalen_alternative_2001].
+Similarly to $\e(R)$, we hypothesize $\var(R)$ has a nonlinear effect on an organism's range size. When $\var(R)$ is low enough that $R$ is relatively predictable, we expect organisms to be range-resident with small home ranges, and we do not expect small changes in $\var(R)$ to have a noticeable effect. As resources become increasingly unpredictable, we expect home range size to increase progressively faster (fig. \@ref(fig:s2-hyp)) because: (1) as $\var(R)$ increases, the chances of finding low $R$ increase superlinearly, (2) the added movement required to search for food increases organisms' energetic requirements, and (3) stochasticity reduces an organism's ability to specialize and reduce competition for $R$ [@levins_evolution_1974]. If resources remain highly unpredictable over long periods of time (e.g., multiple lifespans), organisms may evolve or develop new and consistent behaviors (e.g, nomadism) or adaptations (e.g., increased fat storage or food caching) to buffer themselves against times of unpredictably low $R$. Conversely, if changes in $\sigma^2(t, \vec u)$ are sufficiently predictable, organisms may learn to anticipate and prepare for times of greater stochasticity by pre-preemptively caching food, reducing energetic needs, migrating, or relying on alternative food sources [e.g., @van_baalen_alternative_2001].
 
 ```{r s2-hyp, fig.cap="Hypothesized range size of an organism as a function of resource stochasticity, $\\var(R)$. We expect low values of $\\var(R)$ to result in small home-rages, since organisms are able to depend on relatively predictable resources. As $\\var(R)$ increases, range size should increase nonlinearly, whether this results in an expansion of the home range (in the case of range-resident organisms) or a switch to a larger range via dispersal, nomadism, or migration. Note that the relationship between $\\var(R)$ and range size cannot be linear because it would require range size to be negative for low values of $\\var(R)$.", out.width = '0.5\\textwidth'}
 knitr::include_graphics('../figures/variance-abundance-hr-hypotheses.png')
@@ -177,7 +177,7 @@ knitr::include_graphics('../figures/variance-abundance-hr-hypotheses.png')
 
 ## Interactive effects of $\e(R)$ and $\var(R)$
 
-\noindent We have provided the case for why both $\e(R)$ and $\var(R)$ should be expected to affect organisms' range size, but we presented the two parameters as independent drivers of movement. However, organisms may respond to changes in $\sigma^2(t, u)$ more when resources are scarce than when they are abundant. Consequently, an organism’s movement behavior is likely to be a function of not only the marginal effects of $\e(R)$ and $\var(R)$ but also their interactive effects. A highly unpredictable habitat may be very inhospitable if resources are poor, but $\var(R)$ may have little effect if resources are stochastic but always abundant. Thus, we expect $\var(R)$ to have a stronger effect on range size when $\e(R)$ is low, and less of an effect when $\e(R)$ is high. We explore this more in the following section.
+\noindent We have provided the case for why both $\e(R)$ and $\var(R)$ should be expected to affect organisms' range size, but we presented the two parameters as independent drivers of movement. However, organisms may respond to changes in $\sigma^2(t, \vec u)$ more when resources are scarce than when they are abundant. Consequently, an organism’s movement behavior is likely to be a function of not only the marginal effects of $\e(R)$ and $\var(R)$ but also their interactive effects. A highly unpredictable habitat may be very inhospitable if resources are poor, but $\var(R)$ may have little effect if resources are stochastic but always abundant. Thus, we expect $\var(R)$ to have a stronger effect on range size when $\e(R)$ is low, and less of an effect when $\e(R)$ is high. We explore this more in the following section.
 
 ## Simulating responses to $\e(R)$ and $\var(R)$ {#sims}
 
@@ -221,15 +221,15 @@ knitr::include_graphics('../figures/simulation-regression-mean-and-var.png')
 
 In this section, we test the hypotheses using empirical tracking data on a lowland tapir from the Brazilian Cerrado along with empirical estimates of $\e(R)$ and $\var(R)$. We measure $R$ using Normalized Difference Vegetation Index [NDVI, see @pettorelli_normalized_2011], a remote-sensed measure of landscape greenness, as a proxy for forage abundance. Appendix C contains additional information on how we modeled NDVI and the tapir's movement using continuous-time movement models [@fleming_ctmm_2021; @noonan_scale-insensitive_2019] and autocorrelated kernel density estimation [@noonan_comprehensive_2019; @alston_mitigating_2022; @silva_autocorrelationinformed_2022].
 
-Fig. \@ref(fig:tapir-mw) illustrates how a tapir in the Brazilian Cerrado adapts its 7-day home-range size to spatiotemporal changes in $\mu(t, u)$ and $\sigma^2(t,u)$ [telemetry data from the individual labelled as "Anna" in the dataset from @medici_movement_2022]. Panels A and B show the changes in seven-day average mean and variance in NDVI, respectively, experienced by the tapir during the tracking period. The mean and variance in NDVI were estimated using a Generalized Additive Model for Location and Scale [GAMLS, theory: @rigby_generalized_2005; @stasinopoulos_generalized_2007; example: @gushulak_impacts_2024] with a Beta family of distributions (NDVI values ranged from 0.3534 to 0.9475). Panel C shows the changes in the tapir's 7-day home range over time. Note how the tapir uses more space during periods of lower NDVI (e.g., August 2017) and less space during periods with high NDVI (January 2018). Additionally, when resources are scarce and highly unpredictable (August 2018), the tapir uses up to 5 times more space than when resources are abundant and predictable (e.g., January 2018). Finally, panels D and E show the estimated (marginal) effects of $\mu(t, u)$ and $\sigma^2(t, u)$ on the tapir's 7-day home-range size. Since $\mu(t, u)$ and $\sigma^2(t, u)$ are correlated (panel F) and spatiotemporally autocorrelated (panels A, B, and F), the effects of $R$ on $H$ should be modeled carefully. To avoid over-fitting the model, we constrained the smooth effects of $\mu(t, u)$ and $\sigma^2(t, u)$ and their interaction effect to a small basis size ($\tt{k = 3}$). Additional information is provided in appendix C. The results presented in panels D-F of fig. \@ref(fig:tapir-mw) match our findings from the simulations: The tapir's 7-day home range decreases with $\mu(t, u)$ and increases with $\sigma^2(t, u)$, and the effect of $\mu(t, u)$ depends on $\sigma^2(t, u)$, and vice-versa. Alone, $\mu(t, u)$ and $\sigma^2(t, u)$ cause the tapir to double her home range (panels D and E), but together they result in an approximate 15-fold change in home-range size (observed range: 0.8 to 12.4 km^2^; see panel F). Additionally, note how high NDVI values (> 0.8) cause $\sigma^2(t, u)$ to have little to no effect on home-range size, as indicated by the vertical contour line in panel F.
+Fig. \@ref(fig:tapir-mw) illustrates how a tapir in the Brazilian Cerrado adapts its 7-day home-range size to spatiotemporal changes in $\mu(t, \vec u)$ and $\sigma^2(t, \vec u)$ [telemetry data from the individual labelled as "Anna" in the dataset from @medici_movement_2022]. Panels A and B show the changes in seven-day average mean and variance in NDVI, respectively, experienced by the tapir during the tracking period. The mean and variance in NDVI were estimated using a Generalized Additive Model for Location and Scale [GAMLS, theory: @rigby_generalized_2005; @stasinopoulos_generalized_2007; example: @gushulak_impacts_2024] with a Beta family of distributions (NDVI values ranged from 0.3534 to 0.9475). Panel C shows the changes in the tapir's 7-day home range over time. Note how the tapir uses more space during periods of lower NDVI (e.g., August 2017) and less space during periods with high NDVI (January 2018). Additionally, when resources are scarce and highly unpredictable (August 2018), the tapir uses up to 5 times more space than when resources are abundant and predictable (e.g., January 2018). Finally, panels D and E show the estimated (marginal) effects of $\mu(t, \vec u)$ and $\sigma^2(t, \vec u)$ on the tapir's 7-day home-range size. Since $\mu(t, \vec u)$ and $\sigma^2(t, \vec u)$ are correlated (panel F) and spatiotemporally autocorrelated (panels A, B, and F), the effects of $R$ on $H$ should be modeled carefully. To avoid over-fitting the model, we constrained the smooth effects of $\mu(t, \vec u)$ and $\sigma^2(t, \vec u)$ and their interaction effect to a small basis size ($\tt{k = 3}$). Additional information is provided in appendix C. The results presented in panels D-F of fig. \@ref(fig:tapir-mw) match our findings from the simulations: The tapir's 7-day home range decreases with $\mu(t, \vec u)$ and increases with $\sigma^2(t, \vec u)$, and the effect of $\mu(t, \vec u)$ depends on $\sigma^2(t, \vec u)$, and vice-versa. Alone, $\mu(t, \vec u)$ and $\sigma^2(t, \vec u)$ cause the tapir to double her home range (panels D and E), but together they result in an approximate 15-fold change in home-range size (observed range: 0.8 to 12.4 km^2^; see panel F). Additionally, note how high NDVI values (> 0.8) cause $\sigma^2(t, \vec u)$ to have little to no effect on home-range size, as indicated by the vertical contour line in panel F.
 
-```{r tapir-mw, fig.cap="Effects of $\\mu(t, u)$ and $\\sigma^2(t, u)$ on the home-range size of a lowland tapir (\\emph{Tapirus terrestris}). (A) Trends in resource abundance over time, $\\mu(t, u)$, estimated as the average mean NDVI at the locations visited by the tapir during a seven-day period. (B) Varince in resources over time, $\\sigma^2(t, u)$, esimated as the average variance in NDVI at the locations visited by the tapir during a seven-day period. (C) Seven-day 95% home range estimated using Autocorrelated Kernel Density Estimation. (D, E) Estimated marginal effects of $\\mu(t, u)$ and $\\sigma^2(t, u)$ on home-range size. The model accounted for the marginal effects of $\\mu(t, u)$ and $\\sigma^2(t, u)$ and their interaction effect. (F) Estimated home-range size in response to changes in both $\\mu(t, u)$ and $\\sigma^2(t, u)$. Note how the effect of $\\sigma^2(t, u)$ is more pronounced when $\\mu(t, u)$ is low. See Appendix C for additional information. The tapir movement data corresponds to the individual named ``Anna\" from the Cerrado sample of Medici \\emph{et al.} (2022).", out.width='100%'}
+```{r tapir-mw, fig.cap="Effects of $\\mu(t, \\vec u)$ and $\\sigma^2(t, \\vec u)$ on the home-range size of a lowland tapir (\\emph{Tapirus terrestris}). (A) Trends in resource abundance over time, $\\mu(t, \\vec u)$, estimated as the average mean NDVI at the locations visited by the tapir during a seven-day period. (B) Varince in resources over time, $\\sigma^2(t, \\vec u)$, esimated as the average variance in NDVI at the locations visited by the tapir during a seven-day period. (C) Seven-day 95% home range estimated using Autocorrelated Kernel Density Estimation. (D, E) Estimated marginal effects of $\\mu(t, \\vec u)$ and $\\sigma^2(t, \\vec u)$ on home-range size. The model accounted for the marginal effects of $\\mu(t, \\vec u)$ and $\\sigma^2(t, \\vec u)$ and their interaction effect. (F) Estimated home-range size in response to changes in both $\\mu(t, \\vec u)$ and $\\sigma^2(t, \\vec u)$. Note how the effect of $\\sigma^2(t, \\vec u)$ is more pronounced when $\\mu(t, \\vec u)$ is low. See Appendix C for additional information. The tapir movement data corresponds to the individual named ``Anna\" from the Cerrado sample of Medici \\emph{et al.} (2022).", out.width='100%'}
 knitr::include_graphics('../figures/tapir-example.png')
 ```
 
 # Discussion
 
-\noindent The amount of space organisms is determined by a multitude of factors [@nathan_movement_2008], but the search for resources is often a main driver of animal how much and where organisms move. This paper presents two hypotheses that describe the effects of resource abundance and stochasticity on organisms' range sizes. We use quantitative simulations and an empirical case study to support the hypotheses and show that, together, they provide a simple framework for understanding how motile organisms adapt their movement in dynamic environments.
+\noindent The amount of space organisms use is determined by a multitude of factors [@nathan_movement_2008], but the search for resources is often a main driver of animal how much and where organisms move. This paper presents two hypotheses that describe the effects of resource abundance and stochasticity on organisms' range sizes. We use quantitative simulations and an empirical case study to support the hypotheses and show that, together, they provide a simple framework for understanding how motile organisms adapt their movement in dynamic environments.
 
 Separately, resource abundance and stochasticity have simple but opposing effects on organisms' range sizes: $H$ decreases with $\e(R)$ and increases with $\var(R)$. Together, the degree to which $\e(R)$ affects $H$ depends on $\var(R)$, and vice-versa, so organisms' responses to resource dynamics can be complex. The simulated and empirical results suggest qualitatively similar marginal effects of $\e(R)$ and $\var(R)$, but there are differences in the estimated interactive effects. In the simulated data, $\var(R)$ has little effect when $\e(R)$ is low and a strong effect when $\e(R)$ is high, while the opposite is true for the empirical data. This is due to two reasons. Firstly, the shape and symmetry of bounded distributions such as Gamma ($R > 0$) and Beta ($0 < R < 1$) distributions depend on both $\e(R)$ and $\var(R)$ (figs. A3, A4), but $\var(R)$ does not affect the shape of a Gamma distribution as much if $\e(R)$ is low (fig. B3). Secondly, and perhaps more interestingly, the simulation approach does not account for real-world adaptations to $\e(R)$ and $\var(R)$ such as selective space use, which we account for in the empirical approach. Below we discuss the strengths and limitations of each approach.
 
