--- a/writing/appendix-A-concepts-and-definitions.Rmd
+++ b/writing/appendix-A-concepts-and-definitions.Rmd
@@ -77,7 +77,7 @@ knitr::include_graphics('../figures/habitat-examples-constant-variance.png')
 
 ## Variance in resources, $\var(R)$
 
-\noindent In viewing resources as a random variable, we not only obtain a formal framework for describing $\e(R)$, but also the spread around $\e(R)$, which we quantify with its variance. We use the notation $\var(R)$ to indicate the variance in $R$ around the mean, i.e., after accounting for changes in $\mu(t, u)$, and we use $\sigma^2(t, u)$ to indicate its function over time and time (with estimate $\widehat{\sigma^2}(t, u)$; see Fig. A\@ref(fig:multipanel-changing-var)). For example, the time at which berry bushes produce fruit may seem highly stochastic (i.e., unpredictable) to a young bear, but it becomes predictable as it learns to understand and predict how the mean amount of berry changes with the seasons. Still, whether next year will be a good or bad year for berries remains stochastic because it depends on factors the bear cannot predict (e.g., droughts, fires), but the bear can still expect $\sigma^2(t, u)$ to be lower in the winter since berries will be hard to find (i.e., $\mu(t, u) \approx 0$). Also note that, like with $\mu(t, u)$, what values $\sigma^2(t, u)$ can take depends on what distribution we assume $R$ follows. Figures A\@ref(fig:ex-gamma) and A\@ref(fig:ex-beta) show four examples of Gamma and Beta distributions, respectively, with different means and variances.
+\noindent In viewing resources as a random variable, we not only obtain a formal framework for describing $\e(R)$, but also the spread around $\e(R)$, which we quantify with its variance (i.e., stochasticity). We use the notation $\var(R)$ to indicate the variance in $R$ around the mean, i.e., after accounting for changes in $\mu(t, u)$, and we use $\sigma^2(t, u)$ to indicate its function over time and time (with estimate $\widehat{\sigma^2}(t, u)$; see Fig. A\@ref(fig:multipanel-changing-var)). For example, the time at which berry bushes produce fruit may seem highly stochastic (i.e., unpredictable) to a young bear, but it becomes predictable as it learns to understand and predict how the mean amount of berry changes with the seasons. Still, whether next year will be a good or bad year for berries remains stochastic because it depends on factors the bear cannot predict (e.g., droughts, fires), but the bear can still expect $\sigma^2(t, u)$ to be lower in the winter since berries will be hard to find (i.e., $\mu(t, u) \approx 0$). Also note that, like with $\mu(t, u)$, what values $\sigma^2(t, u)$ can take depends on what distribution we assume $R$ follows. Figures A\@ref(fig:ex-gamma) and A\@ref(fig:ex-beta) show four examples of Gamma and Beta distributions, respectively, with different means and variances.
 
 ```{r multipanel-changing-var, fig.cap="Fictitious example of variation in resources in a heterogeneous environment with changing variance around the mean. (A) Although resources ($R$, orange fill) vary over time and space, the variance (dot color) is lowest at the beginning and end of the observational period, and it is highest when $\\mu(t)$ peaks. (B) $R$ follows a Gamma distribution with time-varying but spatially homogenous mean $\\mu(t)$ and variance $\\sigma^2(t)$. The points in the central panel indicate the ralizations of $R$ in panel a.", fig.pos='!h'}
 knitr::include_graphics('../figures/habitat-examples-changing-variance.png')
