formatted for preprint

--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -15,6 +15,22 @@
 	file = {Accepted Version:C\:\\Users\\stefa\\Zotero\\storage\\3D2VKBSM\\Wood et al. - 2013 - Straightforward intermediate rank tensor product s.pdf:application/pdf},
 }
 
+@article{wood_smoothing_2016,
+	title = {Smoothing Parameter and Model Selection for General Smooth Models},
+	volume = {111},
+	issn = {0162-1459, 1537-274X},
+	url = {https://www.tandfonline.com/doi/full/10.1080/01621459.2016.1180986},
+	doi = {10.1080/01621459.2016.1180986},
+	pages = {1548--1563},
+	number = {516},
+	journaltitle = {Journal of the American Statistical Association},
+	author = {Wood, Simon N. and Pya, Natalya and Säfken, Benjamin},
+	urldate = {2020-04-03},
+	date = {2016-10},
+	langid = {english},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\QAAVUFFD\\Wood et al. - 2016 - Smoothing Parameter and Model Selection for Genera.pdf:application/pdf},
+}
+
 @incollection{duchon_splines_1977,
 	location = {Berlin, Heidelberg},
 	title = {Splines minimizing rotation-invariant semi-norms in Sobolev spaces},
